fixed uuid configuration checks.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 CHANGES
 =======
 
+* fixed uuid configuration checks
 * fixed configuration checks
 * fixed configuration checks
 * fixed configuration checks
