cleaning egg info

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@ CHANGES
 =======
 
 * fixed uuid configuration checks
+* fixed uuid configuration checks
+* fixed uuid configuration checks
 * fixed configuration checks
 * fixed configuration checks
 * fixed configuration checks
