--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 CHANGES
 =======
 
+* Updated Plugin Manager
 * Updated Plugin Manager; updated reconnection procedures
 * Updated name 'node' to 'board'
 * Cleaning
