python deployment updated.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 CHANGES
 =======
 
+* TOX checks PASSED
 * Plugin Manager updated. Device modules updated. Reconnection management improved
 * WAMP Re-Connection failure management updated
 * Plugin Manager updated. systemctl script updated
