python deployment updated.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 CHANGES
 =======
 
+* python deployment updated
+* python deployment updated
 * TOX checks PASSED
 * Plugin Manager updated. Device modules updated. Reconnection management improved
 * WAMP Re-Connection failure management updated
