AUTHORS file fixed

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 CHANGES
 =======
 
+* Update in Lightning-rod main
 * python deployment updated
 * python deployment updated
 * python deployment updated
